    - buffed personal nuclear reactor to 1MW
    - each armor tier now only uses 1 of the previous
    - advanced motors require less steel mechanical parts and electronical parts
    - increased speed of advanced chemical plant from 2 to 3, to be in line with advanced centrifuge
    - reduced liquid nitrogen coolant usage of beacons to 1 and 2 /s respectively
  Bugfixes:
    - fixed more typos in lang (PR #15)
    - set next upgrade of express belts to neo belts
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 12.04.2023
  Features:
    - added some more descriptions
    - added ru locale (PR #12)
  Changes:
    - buffed all fusion fuels
    - neutron collector now gets progressiv faster on higher efficiencies, 100% eff now has double speed
    - reduced neutron output of nuclear reactors and buffed fusion breeder reactors
    - added 2 more module slots to big lab
    - added some GUI tweaks (PR #10)
    - made neutron containers output multiple container per craft and removed need of magnets
    - reduced cost of neutron collector, activator, fusion reactor, big turbine, caster, arc furnace, lufter and wafer fab
    - reduced cost of advanced deep drill, superior mining drill and beacon
    - reduced power output of solar panel from 120KW -> 80kw and solar panel 2 from 200kW -> 160KW and solar panel 3 500kW -> 320kW
    - changed cost of all solar panels accordingly, the benefit of better panels mainly is in the smaller footprint
  Bugfixes:
    - fixed two issues in induction matrix calculation (PR #9)
    - fixed some lang issues (PR #11, #13)
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 04.04.2023
  Features:
    - added sulfur veins (sulf planet fragment now also yields new sulfur chunks)
  Changes:
    - there are now seperate filtering versions for the inserter cranes, all current cranes are now named filtering