@@ -567,12 +567,12 @@ ei_matter-stabilizer=A man-made matter stabilizer. It can be used to stabilize [
 ei_copper-beacon=A liquid cooled beacon. Needs [color=blue]1/s liquid nitrogen[/color] [fluid=ei_liquid-nitrogen] to function. Counts as [color=orange]1[/color] beacon towards beacon overloads.
 ei_iron-beacon=A liquid cooled beacon. Needs [color=blue]2/s liquid nitrogen[/color] [fluid=ei_liquid-nitrogen] to function. Counts as [color=orange]2[/color] beacon towards beacon overloads.
 ei_induction-matrix-core=Core of the Induction matrix multistructure. Only one core can be placed per matrix.
-ei_induction-matrix-basic-coil=Basic coil of the Induction matrix multistructure. Increases matrix energy capacity.
-ei_induction-matrix-advanced-coil=Advanced coil of the Induction matrix multistructure. Increases matrix energy capacity.
-ei_induction-matrix-superior-coil=Superior coil of the Induction matrix multistructure. Increases matrix energy capacity.
+ei_induction-matrix-basic-coil=Basic coil of the Induction matrix multistructure. Increases matrix energy capacity by [color=yellow]25 MJ[/color].
+ei_induction-matrix-advanced-coil=Advanced coil of the Induction matrix multistructure. Increases matrix energy capacity by [color=yellow]100 MJ[/color].
+ei_induction-matrix-superior-coil=Superior coil of the Induction matrix multistructure. Increases matrix energy capacity by [color=yellow]1000 MJ[/color].
 ei_induction-matrix-basic-converter=Basic converter of the Induction matrix multistructure. Increases matrix energy transfer rate.
-ei_induction-matrix-advanced-converter=Advanced converter of the Induction matrix multistructure. Increases matrix energy transfer rate.
-ei_induction-matrix-superior-converter=Superior converter of the Induction matrix multistructure. Increases matrix energy transfer rate. 4 of these are supported at max.
+ei_induction-matrix-advanced-converter=Advanced converter of the Induction matrix multistructure. Increases matrix energy transfer rate. Counts as [color=orange]2[/color] basic converters.
+ei_induction-matrix-superior-converter=Superior converter of the Induction matrix multistructure. Increases matrix energy transfer rate. 4 of these are supported at max. Counts as [color=orange]4[/color] basic converters.
 ei_induction-matrix-basic-solenoid=Solenoid of the Induction matrix multistructure. Can increase efficiency of coils when placed next to them in series. Too many solenoids however can cause a decrease in matrix energy capacity.
 ei_fission-facility=Obtain fission related knowledge to develop fission reactors.
 ei_high-temperature-reactor=Needs to be powered with [color=red]heat[/color] from other reactors. Produces large amounts of steam and can also utilize [color=orange]thorium[/color] [item=ei_thorium-232] based fuel. When using a [color=green]uranium-235 fuel rod[/color] [item=ei_uranium-235-fuel] this machine generates 500MW of power.
@@ -941,7 +941,7 @@ black-hole-2=Reactor components
 black-hole-2-text=Multiple components make up the generator structure. The [color=orange]Black hole generator[/color] [item=ei_black-hole] is the main building needed, it will consume any item in its inventory once activated and add them to its internal [color=green]mass count[/color]. Mass inside the black hole decays over time. Here the type of item does not matter, every item yields the same mass addition. [color=orange]Energy injector pylons[/color] [item=ei_energy-injector-pylon] help in keeping the containment field of the black hole active. Each pylon consumes 5GW of power to be active, however pylons are not needed in the startup stage as the black hole is still small and can be contained by the reactor vessel itself. [color=orange] Energy extractor pylons[/color] [item=ei_energy-extractor-pylon] can extract up to 100GW per pylon from the generator. Only in the fully operational stage of the black hole this is possible.
 
 black-hole-3=Black hole stages
-black-hole-3-text=Getting the reactor to work requires different steps. In the startup state no pylons are required, only an initial mass count of [color=blue]1000x10^3 kg[/color] must be reached. Upon reaching 100% stage progress the generator reaches the next state. To progress further now [color=blue]8 active injector pylons[/color] [item=ei_energy-injector-pylon] must be active at anytime. Pressing the expansion button initiates an increase in the black hole radius. Over [color=blue]60s[/color] the reactor must run in this state to get into its fully operational stage. From here on [color=orange]Energy extractor pylons[/color] [item=ei_energy-extractor-pylon] in range can extract energy from the machine and provide it to your grid. As the power output is massive the generator should now be mostly self sufficient, only needing an constant input of mass. 
+black-hole-3-text=Getting the reactor to work requires different steps. In the startup state no pylons are required, only an initial mass count of [color=blue]10x10^3 kg[/color] must be reached. Upon reaching 100% stage progress the generator reaches the next state. To progress further now [color=blue]8 active injector pylons[/color] [item=ei_energy-injector-pylon] must be active at anytime. Pressing the expansion button initiates an increase in the black hole radius. Over [color=blue]60s[/color] the reactor must run in this state to get into its fully operational stage. From here on [color=orange]Energy extractor pylons[/color] [item=ei_energy-extractor-pylon] in range can extract energy from the machine and provide it to your grid. As the power output is massive the generator should now be mostly self sufficient, only needing an constant input of mass. 
 
 nuclear-fission-and-fusion=Nuclear fission and fusion
 nuclear-fission-and-fusion-text=Exotic Industries introduces some new features for nuclear power. These features are divided into several subcategories. You can find them in the menu on the left.
