@@ -104,7 +104,7 @@ data:extend({
             module_info_icon_shift = {0, 0.5},
             module_info_multi_row_initial_height_modifier = -0.3,
         },
-        supply_area_distance = 6,
+        supply_area_distance = 8,
         radius_visualisation_picture =
         {
             filename = "__base__/graphics/entity/beacon/beacon-radius-visualization.png",
