@@ -16,8 +16,11 @@ Date: 23.03.2023
     - advanced motors require less steel mechanical parts and electronical parts
     - increased speed of advanced chemical plant from 2 to 3, to be in line with advanced centrifuge
     - reduced liquid nitrogen coolant usage of beacons to 1 and 2 /s respectively
+    - decreased cost of induction matrix coils, basic coil now provides 25 instead of only 10 MJ
+    - increased range of beacon and compact beacon by 2 tiles
   Bugfixes:
     - fixed more typos in lang (PR #15)
+    - fixed that in Informatron the blakc hole requires an initial mass of 10 instead of 1000x10^3
     - set next upgrade of express belts to neo belts
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
